--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit==1.18.0
 pandas==1.3.3
-numpy==1.21.6
-python3-distutils
+numpy==1.21.6  # Python 3.12 ile uyumlu bir numpy sürümü
+setuptools>=75.8.0  # setuptools en son sürüm
+wheel>=0.45.1
